<resources>
    <string name="app_name">Chat Application</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="click_here">click here</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="search">Search…</string>
    <string name="messages">Messages</string>
    <string name="you_have_5_new_messages">You have 5 new Messages</string>
    <string name="start_new_chat">Start new chat</string>
    <string name="alex">Alex</string>
    <string name="_15_25">15:25</string>
    <string name="test">Your a/c XXXXXXXXXXXX5820 is credited Rs. 70.00 from Mr RISHI ABINANDHAN S on 12/1/2023 8:12:21 PM.info:P2A/370177665954-KVB</string>
    <string name="forgot_password">forgot password</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="ops">Opps. It happens to the best of us. Input \nyour Phone Number to fix the issue.</string>
    <string name="authy_verif">Authy Verification</string>
    <string name="cop">Copy the verification code in your authy \napplication to verify this account recovery</string>
    <string name="submit">submit</string>
    <string name="enter_the_otp">Enter the OTP</string>
    <string name="confirm_password">Confirm \nPassword</string>
    <string name="set_new_password_and_confirm_the_password">Set new password and confirm the password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password1">Confirm Password</string>
    <string name="example">example</string>
    <string name="write_message_here">Write message here</string>
    <string name="hello">Hello</string>
    <string name="hi">Hi</string>
    <string name="resend_otp_in_30_sec">Resend OTP in 30 sec</string>
    <string name="resend_otp_in">"Resend OTP in "</string>
    <string name="s_d_seconds">%s%d seconds</string>
    <string name="send_otp">Send Otp</string>
    <string name="search1">Search</string>
    <string name="username">Username</string>
    <string name="you">You: </string>
    <string name="about">About</string>
    <string name="about_the_chat_application">About the Chat Application</string>
    <string name="content">This is an Application which units the peoples from all over the world together within a small device.A Chat Application makes it easy to communicate with people anywhere in the world by sending and receiving messages in real time </string>
    <string name="content2">Chatting App allows you to communicate  with your customers in the web chat rooms, It enables you to send and receive messages. Chatting apps makes it easier,simple,and faster to connect with everyone and it also easy to use.</string>
    <string name="content3">There are many types of but this is one in kind that no one has ever used.</string>
    <string name="content4">There are many types of but this is one in kind that no one has ever used. For any trouble contact details are Mail ID=XXX@gmail.com ,Phone no:XXXXXXXXXX Address:NO 12,XXXX XXX st,XXXXX district,Tamil Nadu</string>
    <string name="security">Security</string>
    <string name="phone">Phone</string>
    <string name="update_profile">Update profile</string>
    <string name="chatapplication">ChatApplication</string>
</resources>