<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profile_page"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image_view"
        android:src="@drawable/user"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="40dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/circular" />

    <EditText
        android:id="@+id/profile_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_message1"
        android:elevation="5dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="Autofill,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/profile_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_message1"
        android:elevation="5dp"
        android:enabled="false"
        android:clickable="true"
        android:hint="@string/phone"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="Autofill,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/profle_update_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            android:text="@string/update_profile"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />
        <ProgressBar
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/red"
            android:layout_gravity="center"
            android:id="@+id/profile_progress_bar"/>
    </LinearLayout>


</LinearLayout>