<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recCard"
    android:layout_marginStart="12dp"
    android:layout_gravity="center|top"
    android:layout_marginEnd="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="100dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            tools:ignore="VisualLintBounds">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/Chat_Profile"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/circular"
                android:src="@drawable/tst"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/Chat_Username"
                        android:layout_width="230dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/alex"
                        android:textSize="28sp"
                        tools:ignore="TextSizeCheck" />

                    <TextView
                        android:id="@+id/Chat_time"
                        android:layout_width="50dp"
                        android:layout_height="20dp"
                        android:text="@string/_15_25"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        tools:ignore="TextSizeCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:orientation="horizontal"
                    tools:ignore="TextSizeCheck">

                    <TextView
                        android:id="@+id/Chat_Message"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/test"
                        android:ellipsize="end"
                        android:maxLines="3" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>